syntax = "proto3";

enum KeyType {
  RSA = 0;
  Ed25519 = 1;
  secp256k1 = 2;
  ECDSA = 3;
}

message PublicKey {
  optional KeyType type = 1;
  optional bytes data = 2;
}
